<resources>
    <string name="app_name">Calenro</string>
    <string name="app_version">v{{version}}</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="about_licenses">Licenses</string>
    <string name="about_licenses_failed">Failed to load licenses file</string>

    <string name="to_do_list">Below you\'ll find your to-do list for today and tomorrow</string>

    <string name="to_do">To-Do</string>
    <string name="relaxing_man">Relaxing man</string>
    <string name="nothing_scheduled">You currently do not have anything scheduled for the rest of today or tomorrow</string>
    <string name="no_permission_read_calendar">Please allow Calenro access to your calendar</string>
    <string name="title_activity_settings">Settings</string>

    <string name="toast_init_config">Before you can use Calenro, you\'ll need to configure the daily notification time.</string>

    <string name="settings_notifications_header">Notifications</string>
    <string name="daily_notification_time_title">Daily notification time</string>
    <string name="daily_notification_time_summary">You will receive a notification containing a summary of your schedule (for the next 16 hours) at {{time}} (+- 15 minutes) every day.</string>
    <string name="daily_notification_time_summary_default_time">this time</string>
    <string name="event_start_notification_title">Notify at event start</string>
    <string name="event_start_notification_summary">Show a notification at an event\'s start time, which will allow you to tap the notification to easily reschedule the event.</string>
    <string name="permanent_notification_title">Permanent notification</string>
    <string name="permanent_notification_summary">Show a permanent silent notification containing a summary of events scheduled until 23:59 tomorrow.</string>

    <string name="notification_busy_day">Busy day ahead…</string>
    <string name="notification_few_events">You\'ve got a few things to do today…</string>
    <string name="notification_one_event">You\'ve got one thing to do today…</string>
    <string name="notification_relax_today">Nothing scheduled for the day, have a relaxing day :)</string>
    <string name="notification_relax_48h">Nothing scheduled until 23:59 tomorrow, have a relaxing day :)</string>
    <string name="about_github_link">An open-source app by TrueWinter</string>
</resources>
